--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,10 @@ dependencies {
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.5.0'
-    
-    
+
+    //Toolbar
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
 
 }
