--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,15 +29,25 @@
 
             </intent-filter>
         </activity>
+        <activity android:name=".Vu.WeaponsDetailsActivity"></activity>
 
-        <activity android:name=".Vu.DetailsActivity"></activity>
+        <activity android:name=".Vu.ClassesActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.SEARCH" />
 
-        <service android:name=".Controlleur.MessageReceiver">
+            </intent-filter>
+        </activity>
+        <activity android:name=".Vu.ClassesDetailsActivity"></activity>
+
+
+
+        <service android:name=".Controller.MessageReceiver">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <service android:name=".Controlleur.InstanceIdService">
+        <service android:name=".Controller.InstanceIdService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
