--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,23 +22,18 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Vu.WeaponsActivity">
+        <activity android:name=".Vu.Fragments.MainActivityFragment">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
                 <action android:name="android.intent.action.SEARCH" />
-
             </intent-filter>
         </activity>
+
+
         <activity android:name=".Vu.WeaponsDetailsActivity"></activity>
 
-        <activity android:name=".Vu.ClassesActivity">
-            <intent-filter>
-                <category android:name="android.intent.category.LAUNCHER" />
-                <action android:name="android.intent.action.SEARCH" />
-
-            </intent-filter>
-        </activity>
         <activity android:name=".Vu.ClassesDetailsActivity"></activity>
+
 
 
 
