Changing design home and adding collaps on Weapons details activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
 
         <activity android:name=".Vu.Activities.ClassesDetailsActivity"></activity>
 
-        <activity android:name=".Vu.Activities.WeaponsDetailsActivity"></activity>
+        <activity android:name=".Vu.Activities.WeaponsDetailsActivity"
+                android:theme="@style/Theme.Design.NoActionBar"></activity>
 
 
 
