--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         </activity>
 
 
-        <activity android:name=".Vu.Activities.EquipmentsDetailsActivity"></activity>
+        <activity android:name=".Vu.Activities.EquipmentsDetailsActivity"
+            android:theme="@style/Theme.Design.NoActionBar"></activity>
 
         <activity android:name=".Vu.Activities.ClassesDetailsActivity"></activity>
 
