--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,13 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".Vu.Activities.Apropos"
+            android:theme="@style/Theme.Design.NoActionBar">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
 
         <activity android:name=".Vu.Activities.EquipmentsDetailsActivity"
             android:theme="@style/Theme.Design.NoActionBar"></activity>
